--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,8 +16,8 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         
         <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to 'Sign Up', new_user_path %></li>
-          <li><a href="/login">Login</a></li>
+          <li class="link"><%= link_to 'Sign Up', new_user_path %></li>
+          <li class="link"><a href="/login">Login</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -34,13 +34,14 @@
         <li><a href="/politiquiz">Politiquiz</a></li>
         <li><a href="/politiquiz">Politicking</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">State Political Platforms<b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Illinois</a></li>
-          </ul>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Illinois Candidates<b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="/candidates/5">Pat Quinn</a></li>
+              <li><a href="/candidates/6">Bruce Rauner</a></li>
+            </ul>
         </li>
       </ul>
-      <form class="navbar-form navbar-left" role="search">
+      <form class="navbar-form navbar-right" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
@@ -60,6 +61,34 @@
   </div>
 </div>
 
-<a href="/userlist" styel="text-align:centerf">User List</a>
+  <div class="container-banner2">  
+    <div class="row">
+       <div class="col-md-6">
+          <img src="http://i1059.photobucket.com/albums/t422/chloerules25/left.png"/>
+       </div>
+       <div class="col-md-6" id="search">
+         <form class="navbar-form" role="search">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Search">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+         </form>
+         <br>
+         <br>
+         <br>
+        </div>
+      </div>
+  </div>
 
+<div class="container timer">
+  <div class="row">
+    <div class="politicking col-md-4 col-md-offset-4">
+      <div id="tc_2014nov04_120000am" style="width:439px;height:126px"><a title="Free online countdown, countup, timer, counter and stopwatch" href="http://www.tickcounter.com/">countdown</a></div><script type="text/javascript">(function(){var s = document.createElement('script');s.src = '//tickcounter.com/widget/countdown/2014nov04/America+Chicago/120000am/Next%2520Illinois%2520Election.js';s.async = "async";s.type = 'text/javascript';document.body.appendChild(s);}());</script>  
+    </div>
+   </div>
+</div>
+
+<div class="userlist">
+  <a href="/userlist" styel="text-align:centerf">User List</a>
+</div>
 
